@@ -1,6 +1,8 @@
 1.2.10
 ------
 
+Added error message to TrainEval's eval() method. (Jason)
+
 
 1.2.9 (Bug fix release)
 _____
